# zippy

./: .gitignore  LICENSE  README.md  pyproject.toml
zippy/: __main__.py  config_creator.py  folder_watcher.py  zippy.py
